--- a/common.css
+++ b/common.css
@@ -25,6 +25,8 @@
 html {
     scroll-behavior: smooth;
     cursor: crosshair;
+    width: 100vw;
+    height: 100vh;
 }
 
 body {
@@ -32,6 +34,7 @@ body {
     scroll-behavior: smooth;
     overflow: hidden;
     width: 100%;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
