--- a/common.css
+++ b/common.css
@@ -131,12 +131,15 @@ menu nav a {
     width: 100%;
     height: 2px;
     background: white;
+    color: white;
 }
 
 .btn-line-short {
     position: relative;
     z-index: 1;
     background: white;
+    background-color: white;
+    color: white;
     width: 50%;
     align-self: flex-end;
     transform-origin: left;
